# mp3-to-youtube

./: .gitignore  README.md  pyproject.toml
src/mp3_to_youtube/: __init__.py  __main__.py  cli.py  convert.py  metadata.py  youtube.py
